Fixed Next button visibility in Request access

--- a/gui/admin-gui/src/frontend/scss/_midpoint.scss
+++ b/gui/admin-gui/src/frontend/scss/_midpoint.scss
@@ -2343,7 +2343,6 @@ footer.app-footer a {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    padding-bottom: 0px;
 
     .select2-search--inline {
       width: auto !important;
